compiler/testData/diagnostics/tests/resolve/invoke/errors/unresolvedInvoke.kt
// RUN_PIPELINE_TILL: FRONTEND
// DIAGNOSTICS: -UNUSED_EXPRESSION
fun foo(i: Int) {
    <!FUNCTION_EXPECTED!>i<!>()
    <!FUNCTION_EXPECTED!>1<!>()
}